<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_my_house"
            android:icon="@drawable/ic_menu_house"
            android:title="@string/house" />
        <item
            android:id="@+id/nav_my_room"
            android:icon="@drawable/ic_menu_room"
            android:title="@string/room" />
        <item
            android:id="@+id/nav_my_mate"
            android:icon="@drawable/ic_menu_mate"
            android:title="@string/mates" />
        <item
            android:id="@+id/nav_my_costs"
            android:icon="@drawable/ic_menu_cost"
            android:title="@string/costs" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/dashboard" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/dashboard" />
        </menu>
    </item>

</menu>
