<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tk.housem8.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="241dp"
        android:layout_height="292dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:contentDescription="@string/housem8_logo"
        app:srcCompat="@drawable/housem8logoceroalpha"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/entryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entry_button"

        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="355dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goLogIn"

        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="355dp"
        android:layout_below="@+id/entryButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp" />
</android.widget.RelativeLayout>
