<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tk.housem8.activity_navigation">
    <!--tools:showIn="@layout/app_bar_activity_navigation"-->



    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:id="@+id/textInputLayoutCountry"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/amount" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputDescripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCommerce">

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description" />
    </android.support.design.widget.TextInputLayout>


    <Spinner
        android:id="@+id/costFamilySpinner"
        android:textSize="30sp"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="154dp"
        android:layout_height="16dp"
        android:text="@string/costFamily"
        app:layout_constraintLeft_toLeftOf="@+id/textInputLayoutCountry"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCountry" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="154dp"
        android:layout_height="16dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/commerce"
        app:layout_constraintLeft_toLeftOf="@+id/dateButton"
        app:layout_constraintTop_toBottomOf="@+id/dateButton" />

    <Spinner
        android:id="@+id/spinnerCommerce"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView3" />

    <TextView
        android:id="@+id/dateButton"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:padding="12dp"
        android:text="@string/date"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="@+id/costFamilySpinner"
        app:layout_constraintTop_toBottomOf="@+id/costFamilySpinner"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/costFamilySpinner" />

    <Button
        android:id="@+id/back"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:text="Volver"
        app:layout_constraintLeft_toLeftOf="@+id/textInputDescripcion"
        app:layout_constraintTop_toBottomOf="@+id/textInputDescripcion" />

    <Button
        android:id="@+id/saveCost"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:text="Guardar"
        android:onClick="saveCost"
        app:layout_constraintRight_toRightOf="@+id/textInputDescripcion"
        app:layout_constraintTop_toBottomOf="@+id/textInputDescripcion" />


</android.support.constraint.ConstraintLayout>
